syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "BlogGrpc";
package blog;

service Blogger {

    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
    rpc ListBlog(getAllRequest) returns (getAllResponse);
    rpc GetBlogById(GetBlogByIdRequest) returns (GetBlogByIdResponse);
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
}

message CreateBlogRequest {
    string Title = 1;
    string Description = 2;
    string ImageUrl = 3;
    string Author = 4;
}

message CreateBlogResponse {
    int32 Id = 1;
}

message getAllRequest{}

message getAllResponse
{
    repeated BlogInfo Blogs = 1;
}

message BlogInfo
{
    string Title = 1;
    string Description = 2;
    string ImageUrl = 3;
    string Author = 4;
}

message GetBlogByIdRequest
{
    int32 Id = 1;
}

message GetBlogByIdResponse
{
    BlogInfo Blog = 1;
}

message DeleteBlogRequest
{
    int32 Id = 1;
}

message DeleteBlogResponse
{
    bool Success = 1;
}